[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tkinter_kit"
version = "0.0.1"
authors = [
    {name="KpihX", email="kapoivha@gmail.com"}
]
maintainers = [
    {name="KpihX", email="kapoivha@gmail.com"}
]
description = "A package with some helpful tkinter functions"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
keywords = ["tkinter", "frame", "window", "scroll", "functions"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://pypi.org/project/tkinter-kit/"
Issues = "https://github.com/KpihX/tkinter_kit/issues"
Repository = "https://github.com/KpihX/tkinter_kit.git"